# o-kawai-koto

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
app/: communications_ex.c  communications_ex.h  data.h  encoder.c  encoder.h  main.c  main.h
bsp/: CMakeLists.txt
bsp/board/: CMakeLists.txt
bsp/board/include/: basic_operations.h  communications.h  init_board.h  log.h
bsp/board/linux_amd64/src/: basic_operations.c  communications.c  init_board.c  log.c
bsp/board/stm32l4xx/: dependencies.cmake
bsp/board/stm32l4xx/include/: interruptions.h  pin_mapper.h  stm32l4xx_iface.h
bsp/board/stm32l4xx/src/: basic_operations.c  communications.c  init_board.c  interruptions.c  log.c  pin_mapper.c  stm32l4xx_hal_msp.c  stm32l4xx_iface.c
bsp/network/: CMakeLists.txt
bsp/network/at/: dependencies.cmake
bsp/network/at/include/: communications_ex.h  detectors.h
bsp/network/at/src/: communications_ex.c  detectors.c  network.c
bsp/network/include/: network.h
cmake/: common.cmake  secrets.cmake
cmake/configs/: linux_amd64  linux_amd64.cmake  stm32l4xx.cmake
cmake/toolchains/: arm_none_eabi_toolchain.cmake
docs/AT Commands/: AT Commands.md
drivers/: CMakeLists.txt
drivers/Inc/: stm32l4xx_hal_conf.h
drivers/Src/: system_stm32l4xx.c
